JETcompiler/Tests/bad/bad009.myout
Error while processing expression: cannot apply assignment expression - incompatible types "IntegerType" and "BooleanType", line 3.
